skin/frontend/creo/default/style.css
/* ... */
.col-static { position: static; }
#nav .links-holder {
    border-top: 1px solid #ddd;
    padding: 30px 0 0;
}
#nav .links-holder:after {
    display: block;
    content: '';
    clear: both;
}
#nav .cat-links {
    margin: 0 0 0 12px;
    padding: 0;
    float: left;
    list-style: none;
    width: 140px;
    text-transform: uppercase;
    text-align: center;
    color: #222;
    font: 14px/16px "Roboto Condensed", Helvetica, Arial, sans-serif;
}
#nav .cat-links:first-child { margin-left: 0; }
#nav .cat-links:nth-child(2) { margin-top: 14px; }
#nav .cat-links:nth-child(3) { margin-top: 28px; }
#nav .cat-links:nth-child(4) { margin-top: 42px; }
#nav .cat-links li { margin: 0 0 8px; }
#nav .cat-links a {
    display: block;
    border-width: 2px 0;
    border-color: #000;
    border-style: solid;
    padding: 2px 5px;
    transform: skewY(-7deg);
    -moz-transform: skewY(-7deg);
    -ms-transform: skewY(-7deg);
    -webkit-transform: skewY(-7deg);
}
#nav .cat-links a:hover {
    background: #f16167;
    text-decoration: none;
}
#nav .drop.cat-drop::before { height: 118px; }
.modal-open .modal {
    padding-left: 0px !important;
    padding-right: 0px !important;
    overflow-y: scroll;
    z-index: 99999;
}
.modal-backdrop{z-index: 9999;}
.breadcrumb1 ul {
    margin: 0;
    padding: 10px 0;
    list-style: none;
    overflow: hidden;
    text-transform: uppercase;
    color: #000;
    font: 12px/18px "Roboto Condensed", Helvetica, Arial, sans-serif;
}
.breadcrumb1 li {
    float: left;
    position: relative;
    margin: 0 45px 0 0;
}
.breadcrumb1 li:before {
    width:28px;
    height:2px;
    background:#f16167;
    position:absolute;
    top:50%;
    left:-38px;
    margin-top:-1px;
    content:'';
}
.breadcrumb1 li:after{
    width:7px;
    height:7px;
    margin-top:-3px;
    background:#f16167;
    border-radius:50%;
    position:absolute;
    top:50%;
    left:-14px;
    content:'';
}
.breadcrumb1 li:last-child:before {background:#e4e4e4;}
.breadcrumb1 li:last-child:after{display:none;}
.breadcrumb1 li a { color: #000; }
.cate-links{margin:0 0 20px;}
.cate-links nav{
    display:inline-block;
    vertical-align:middle;
    margin:0 22px 0 0;
    max-width: 610px;
}
.cate-links ul{
    margin:0;
    padding:2px 0 0;
    list-style:none;
    font: 12px/14px "Roboto Condensed", Helvetica, Arial, sans-serif;
}
.cate-links li{
    display:inline-block;
    vertical-align:middle;
}
.cate-links a{color:#000;}
.cate-links .cate1 li{margin:0 5px 5px 0;}
.cate-links .cate1 a{
    display:block;
    padding:2px 10px;
    border:1px solid #000;
    transform: skewX(-18deg);
    -moz-transform: skewX(-18deg);
    -webkit-transform: skewX(-18deg);
    -ms-transform: skewX(-18deg);
}
.cate-links .cate1 a span{
    transform: skewX(18deg);
    -moz-transform: skewX(18deg);
    -webkit-transform: skewX(18deg);
    -ms-transform: skewX(18deg);
    display:block;
    text-transform:uppercase;
}
.cate-links .cate1 li.active a,
.cate-links .cate1 a:hover{
    text-decoration:none;
    color:#fff;
    background:#000;
}
#fme_layered_gender .fme_layered_attribute {
    color:#767676;
    background:#ddd;
    display:block;
    padding:0px 10px;
    border:1px solid #ddd;
    transform: skewX(-18deg);
    -moz-transform: skewX(-18deg);
    -webkit-transform: skewX(-18deg);
    -ms-transform: skewX(-18deg);
    min-width: 67px;
    line-height: 18px;
    text-align: center;
}
div.fme-filter dd li{overflow: visible !important;}
#fme_layered_gender > ol {
    padding: 0;
}
#fme_layered_styles .fme_layered_attribute {
    margin-right:10px
}

#fme_layered_gender a.fme_layered_attribute span {
    display: block;
    transform: skewX(18deg);
    text-transform:uppercase;
}

#fme_layered_gender .fme_layered_attribute.active,
#fme_layered_gender .fme_layered_attribute:hover{
    text-decoration:none;
    border-color:#000;
    background:#000 !important;
    color:#fff;
}
.cate-links .cate2 a span{
    transform: skewX(18deg);
    -moz-transform: skewX(18deg);
    -webkit-transform: skewX(18deg);
    -ms-transform: skewX(18deg);
    display:block;
}
.cate-links .cate3 ul,
.cate-links .cate3 .title{
    display:inline-block;
    vertical-align:middle;
}
.cate-links .cate3 li{
    margin:0 0 0 5px;
}
.cate-links .cate3 li a{
    display:block;
    background: url('images/sprite-shirts.png') no-repeat 0 -43px;
    width: 48px;
    height: 31px;
}
.cate-links .cate3 li:nth-child(2) a{
    background: url('images/sprite-shirts.png') no-repeat -55px -43px;
    width: 49px;
    height: 32px;
}
.cate-links .cate3 li:nth-child(3) a{
    background: url('images/sprite-shirts.png') no-repeat -111px -43px;
    width: 50px;
    height: 33px;
}

.cate-links .cate3 li.active a,
.cate-links .cate3 li a:hover{background-position:0 0;}
.cate-links .cate3 li:nth-child(2).active a,
.cate-links .cate3 li:nth-child(2) a:hover{background-position:-55px 0;}
.cate-links .cate3 li:nth-child(3).active a,
.cate-links .cate3 li:nth-child(3) a:hover{background-position:-111px 0;}
.heading-area{
    position: relative;
    padding-top: 20px;
    padding-bottom: 30px;
}
.heading-area:before{
    position: absolute;
    top: 0;
    left: 15px;
    right: 15px;
    background: #eee;
    height: 1px;
    content: '';
}
.heading-area:after{
    position: absolute;
    bottom: 0;
    left: 15px;
    right: 15px;
    background: #eee;
    height: 5px;
    content: '';
}
.heading-area h2{
    margin: 0;
    color: #222;
    text-transform: uppercase;
    font: 40px/42px "Roboto Condensed", Helvetica, Arial, sans-serif;
}
.heading-area .results-description{
    display: block;
    color: #888;
    font:italic 10px/18px "Roboto Condensed", Helvetica, Arial, sans-serif;
}
.sort-area{
    padding-bottom: 20px;
    padding-top: 0;
}
.sort-area .view-options{
    margin: 0;
    padding: 0;
    list-style: none;
    float: left;
}
.sort-area .view-options li{
    float: left;
    margin: 0 3px 0 0;
}
/* ... */

